[package]
name = "leetcode"
version = "0.1.0"
edition = "2024"

[dependencies]

[[bin]]
name = "001_two_sum"
path = "src/001_two_sum.rs"

[[bin]]
name = "003_longest_substring"
path = "src/003_longest_substring.rs"

[[bin]]
name = "004_median_two_sorted_arrays"
path = "src/004_median_two_sorted_arrays.rs"
